--- a/.github/workflows/unzip-to-repo.yml
+++ b/.github/workflows/unzip-to-repo.yml
@@ -33,7 +33,6 @@ jobs:
           echo "ZIP URL: ${{ inputs.zip_url }}"
           echo "Private: ${{ inputs.private_repo }}"
           
-          # Basic repository name validation
           if [[ ! "${{ inputs.repo_name }}" =~ ^[a-zA-Z0-9_-]+$ ]]; then
             echo "❌ Error: Repository name can only contain alphanumeric characters, hyphens, and underscores"
             exit 1
@@ -43,13 +42,11 @@ jobs:
         run: |
           echo "📥 Downloading ZIP file from ${{ inputs.zip_url }}"
           
-          # Download with timeout and error handling
           if ! curl -L -f -o archive.zip --max-time 300 "${{ inputs.zip_url }}"; then
             echo "❌ Failed to download ZIP file"
             exit 1
           fi
           
-          # Verify file was downloaded and has content
           if [ ! -s archive.zip ]; then
             echo "❌ Downloaded file is empty"
             exit 1
@@ -62,13 +59,11 @@ jobs:
           echo "📦 Extracting ZIP file..."
           mkdir -p extracted_content
           
-          # Extract with error handling
           if ! unzip -q archive.zip -d extracted_content; then
             echo "❌ Failed to extract ZIP file"
             exit 1
           fi
           
-          # Check if extraction produced files
           file_count=$(find extracted_content -type f | wc -l)
           if [ "$file_count" -eq 0 ]; then
             echo "❌ No files found in ZIP archive"
@@ -76,8 +71,6 @@ jobs:
           fi
           
           echo "✅ Extracted $file_count files"
-          echo "📂 Directory structure:"
-          tree extracted_content/ || ls -R extracted_content/
 
       - name: Create repository via API
         uses: actions/github-script@v8
@@ -94,7 +87,6 @@ jobs:
             const repoDescription = process.env.REPO_DESCRIPTION;
             const isPrivate = process.env.PRIVATE_REPO === 'true';
             
-            // Get the authenticated user to ensure we're creating in the right account
             const { data: user } = await github.rest.users.getAuthenticated();
             console.log(`🔐 Authenticated as: ${user.login}`);
             
@@ -114,7 +106,6 @@ jobs:
               console.log(`✅ Repository created: ${repo.html_url}`);
               console.log(`📋 Clone URL: ${repo.clone_url}`);
               
-              // Return the clone URL for the next step
               return repo.clone_url;
               
             } catch (error) {
@@ -138,15 +129,28 @@ jobs:
           echo "🔧 Configuring git..."
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git config http.postBuffer 524288000
+          git config http.version HTTP/1.1
           
           echo "📋 Initializing repository..."
           git init
           
-          # Create .gitattributes for proper line ending handling
           echo "* text=auto" > .gitattributes
           
           echo "➕ Adding all files..."
           git add .
+          
+          TOTAL_SIZE=$(du -sh . | cut -f1)
+          FILE_COUNT=$(find . -type f | wc -l)
+          echo "📊 Repository stats: $FILE_COUNT files, $TOTAL_SIZE total"
+          
+          LARGE_FILES=$(find . -type f -size +100M 2>/dev/null || true)
+          if [ -n "$LARGE_FILES" ]; then
+            echo "⚠️ Warning: Found files over 100MB:"
+            echo "$LARGE_FILES"
+            echo "These exceed GitHub's file size limit and must be handled with Git LFS or removed"
+            exit 1
+          fi
           
           echo "💾 Creating initial commit..."
           git commit -m "Initial commit: Add files from ZIP archive
@@ -159,17 +163,35 @@ jobs:
           git branch -M main
           
           echo "🔗 Adding remote..."
-          # Insert token into URL for authentication
           REPO_URL_WITH_TOKEN=$(echo "$REPO_URL" | sed "s|https://|https://x-access-token:${GITHUB_TOKEN}@|")
           git remote add origin "$REPO_URL_WITH_TOKEN"
           
           echo "⬆️ Pushing to remote..."
-          if git push -u origin main; then
-            echo "✅ Successfully pushed to repository!"
-          else
-            echo "❌ Failed to push to repository"
-            exit 1
-          fi
+          for attempt in 1 2 3; do
+            echo "Attempt $attempt of 3..."
+            if GIT_CURL_VERBOSE=1 git push -u origin main --verbose 2>&1; then
+              echo "✅ Successfully pushed to repository!"
+              exit 0
+            else
+              PUSH_EXIT_CODE=$?
+              echo "⚠️ Push attempt $attempt failed (exit code: $PUSH_EXIT_CODE)"
+              
+              if [ $attempt -eq 3 ]; then
+                echo ""
+                echo "❌ Failed to push after 3 attempts"
+                echo ""
+                echo "🔍 Troubleshooting:"
+                echo "1. Verify REPO_CREATE_TOKEN has 'repo' scope or 'Contents: Read and write' permission"
+                echo "2. Check repository: ${REPO_URL%.git}"
+                echo "3. Push size: $TOTAL_SIZE ($FILE_COUNT files)"
+                echo "4. Review the verbose output above for specific errors"
+                exit 1
+              fi
+              
+              echo "Retrying in 10 seconds..."
+              sleep 10
+            fi
+          done
 
       - name: Generate summary
         if: success()
@@ -200,17 +222,14 @@ jobs:
             const { data: user } = await github.rest.users.getAuthenticated();
             
             try {
-              // Check if repo exists
               await github.rest.repos.get({
                 owner: user.login,
                 repo: repoName
               });
               
-              // If we get here, repo exists - ask if they want to clean it up
               console.log(`⚠️ Repository ${user.login}/${repoName} was created but workflow failed.`);
               console.log(`Consider deleting it manually if it's empty: https://github.com/${user.login}/${repoName}/settings`);
               
             } catch (error) {
-              // Repo doesn't exist, nothing to clean up
               console.log('No repository cleanup needed.');
             }
