--- a/.github/workflows/unzip-to-repo.yml
+++ b/.github/workflows/unzip-to-repo.yml
@@ -83,6 +83,14 @@ jobs:
             exit 1
           fi
 
+          echo "🔎 Checking for oversized files (>99MB)..."
+          if find extracted_content -type f -size +99M -print -quit | grep -q .; then
+            echo "❌ Found files larger than 99MB. GitHub blocks pushing files over 100MB."
+            echo "Offending files:"
+            find extracted_content -type f -size +99M -printf '%p (%s bytes)\n'
+            exit 1
+          fi
+
           echo "✅ Extracted $file_count files"
           echo "📂 Directory structure:"
           tree -L 3 extracted_content/ || ls -R extracted_content/
@@ -146,6 +154,11 @@ jobs:
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git config --global init.defaultBranch main
           git config --global --add safe.directory "$(pwd)"
+
+          if [ -d .git ]; then
+            echo "🧹 Removing existing git metadata from extracted content..."
+            rm -rf .git
+          fi
 
           echo "📋 Initializing repository..."
           git init -b main
