Fix git init ordering in unzip workflow

--- a/.github/workflows/unzip-to-repo.yml
+++ b/.github/workflows/unzip-to-repo.yml
@@ -151,10 +151,6 @@ jobs:
           set -euo pipefail
           cd extracted_content
 
-          echo "🔧 Configuring git..."
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-
           if [ -d .git ]; then
             echo "🧹 Removing existing git metadata from extracted content..."
             rm -rf .git
@@ -162,6 +158,10 @@ jobs:
 
           echo "📋 Initializing repository..."
           git init -b main
+
+          echo "🔧 Configuring git..."
+          git config --local user.name "github-actions[bot]"
+          git config --local user.email "github-actions[bot]@users.noreply.github.com"
 
           echo "* text=auto" > .gitattributes
 
